feat: support theme config

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,16 +5,14 @@ const currentYear = new Date().getFullYear();
 <footer class="mt-16">
   <div class="sm:px-8">
     <div class="mx-auto max-w-7xl lg:px-8">
-      <div class="border-t border-zinc-100 py-8 dark:border-zinc-700/40">
+      <div class="border-t py-8">
         <div class="relative px-4 sm:px-8 lg:px-12">
           <div class="mx-auto max-w-2xl lg:max-w-5xl">
             <div
               class="flex flex-col items-center justify-between gap-6 sm:flex-row"
             >
               <a aria-label="Back to Home" href="/">
-                <div
-                  class="flex flex-row gap-0 fill-zinc-600 hover:fill-zinc-900 dark:fill-zinc-400 dark:hover:fill-zinc-100"
-                >
+                <div class="flex flex-row gap-0 fill-foreground">
                   <svg width="32" height="32" viewBox="0 0 1000 1000">
                     <g transform="matrix(44.5 0 0 44.5 500 500)">
                       <path transform="translate(-12, -11.5)" d="M1 21h22L12 2"
@@ -30,7 +28,7 @@ const currentYear = new Date().getFullYear();
                   </svg>
                 </div>
               </a>
-              <p class="text-center text-sm text-zinc-800 dark:text-zinc-400">
+              <p class="text-center text-sm leading-loose">
                 &copy; {currentYear} Long Nhat Nguyen
               </p>
             </div>
