--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,5 +1,6 @@
 ---
-import '@/styles/global.css';
+import '@/styles/globals.css';
+import '@/styles/fonts.css';
 
 interface Props {
   title?: string | undefined;
