--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,17 +12,14 @@ interface Props {
 const { title, description, ogImage } = Astro.props;
 ---
 
-<html lang="en" class="dark h-full antialiased">
+<html lang="en">
   <head>
     <MainHead title={title} description={description} ogImage={ogImage} />
   </head>
-  <body class="flex h-full flex-col bg-zinc-50 dark:bg-black">
+  <body class="font-sans antialiased flex h-full flex-col bg-background">
     <div class="fixed inset-0 flex justify-center sm:px-8">
       <div class="flex w-full max-w-7xl lg:px-8">
-        <div
-          class="w-full bg-white ring-1 ring-zinc-100 dark:bg-zinc-900 dark:ring-zinc-300/20"
-        >
-        </div>
+        <div class="w-full bg-card border"></div>
       </div>
     </div>
     <div class="relative">
