--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,5 @@
 ---
-import { Icon } from 'astro-icon';
-import { cn } from '@/lib/utils';
-import { buttonVariants, Button } from '@/components/ui/button';
+import ThemeToggle from '@/components/ThemeToggle.astro';
 ---
 
 <header class="sticky top-0 z-50">
@@ -14,24 +12,7 @@ import { buttonVariants, Button } from '@/components/ui/button';
               <div class="flex flex-1"></div>
               <div class="flex flex-1 justify-end md:justify-center"></div>
               <div class="flex justify-end md:flex-1">
-                <Button
-                  variant="ghost"
-                  size="icon"
-                  id="theme-toggle"
-                  type="button"
-                  aria-label="Toggle dark mode"
-                >
-                  <Icon
-                    name="ph:sun-bold"
-                    aria-hidden="true"
-                    class="h-6 w-6 stroke-amber-600 text-amber-500 transition duration-200 dark:hidden [@media(prefers-color-scheme:dark)]:stroke-amber-600 [@media(prefers-color-scheme:dark)]:text-amber-500"
-                  />
-                  <Icon
-                    name="ph:moon-stars-bold"
-                    aria-hidden="true"
-                    class="hidden h-6 w-6 stroke-slate-100 text-slate-50 transition duration-200 dark:block [@media_not_(prefers-color-scheme:dark)]:stroke-amber-600 [@media_not_(prefers-color-scheme:dark)]:text-amber-500"
-                  />
-                </Button>
+                <ThemeToggle />
               </div>
             </div>
           </div>
@@ -40,39 +21,3 @@ import { buttonVariants, Button } from '@/components/ui/button';
     </div>
   </div>
 </header>
-
-<script is:inline>
-const theme = (() => {
-  if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-    return localStorage.getItem('theme');
-  }
-  if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-    return 'dark';
-  }
-  return 'light';
-})();
-
-if (theme === 'light') {
-  document.documentElement.classList.remove('dark');
-} else {
-  document.documentElement.classList.add('dark');
-}
-
-window.localStorage.setItem('theme', theme);
-</script>
-
-<script>
-  const handleToggleClick = () => {
-    const element = document.documentElement;
-    element.classList.toggle('dark');
-
-    const isDark = element.classList.contains('dark');
-    localStorage.setItem('theme', isDark ? 'dark' : 'light');
-  };
-
-  const darkModeButton = document.getElementById('theme-toggle');
-
-  if (darkModeButton) {
-    darkModeButton.addEventListener('click', handleToggleClick);
-  }
-</script>
