chore: clean project

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,14 +49,17 @@ import { AspectRatio } from '@/components/ui/aspect-ratio';
                   Long Nhat Nguyen
                 </span>
               </h1>
-              <p class="leading-7 [&:not(:first-child)]:mt-6 italic">
+              <p class="leading-7 [&:not(:first-child)]:mt-6">
+                Music and photography have always been my passions, filling my
+                life with joy and creativity. Recently, I have discovered an
+                interest in programming that has captivated me. Although my
+                knowledge in programming is limited, I find great enjoyment in
+                exploring this fascinating field.
+              </p>
+              <blockquote class="leading-7 [&:not(:first-child)]:mt-6 italic">
                 "If we'll ever be remembered, I know it'll be for the way that
                 we love."
-              </p>
-              <p class="leading-7 [&:not(:first-child)]:mt-6">
-                I come from Vietnam. I love music. I love taking photos of the
-                amazing scenes and people around me.
-              </p>
+              </blockquote>
               <div class="mt-6 flex flex-wrap items-center">
                 <a
                   aria-label="Me on GitHub"
