--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import BaseLayout from '@/layouts/BaseLayout.astro';
+import BaseLayout from '@/layouts/BaseLayout.astro'
 
-import { Icon } from 'astro-icon';
-import { Image } from 'astro:assets';
+import { Icon } from 'astro-icon'
+import { Image } from 'astro:assets'
 
-import Portrait from '@/assets/portrait.jpg';
-import { Button } from '@/components/ui/button';
-import { AspectRatio } from '@/components/ui/aspect-ratio';
+import Portrait from '@/assets/portrait.jpg'
+import { Button } from '@/components/ui/button'
+import { AspectRatio } from '@/components/ui/aspect-ratio'
 ---
 
 <BaseLayout
