--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import ThemeToggle from '@/components/ThemeToggle.astro';
+import ThemeToggle from '@/components/ThemeToggle.astro'
 ---
 
 <header class="sticky top-0 z-50">
