--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,22 +1,22 @@
 ---
-import Footer from '@/components/Footer.astro';
-import Header from '@/components/Header.astro';
-import MainHead from '@/components/MainHead.astro';
+import Footer from '@/components/Footer.astro'
+import Header from '@/components/Header.astro'
+import MainHead from '@/components/MainHead.astro'
 
 interface Props {
-  title?: string | undefined;
-  description?: string | undefined;
-  ogImage?: URL | undefined;
+  title?: string | undefined
+  description?: string | undefined
+  ogImage?: URL | undefined
 }
 
-const { title, description, ogImage } = Astro.props;
+const { title, description, ogImage } = Astro.props
 ---
 
 <html lang="en">
   <head>
     <MainHead title={title} description={description} ogImage={ogImage} />
   </head>
-  <body class="font-sans antialiased flex h-full flex-col bg-background">
+  <body class="font-sans antialiased flex flex-col h-full bg-background">
     <div class="fixed inset-0 flex justify-center sm:px-8">
       <div class="flex w-full max-w-7xl lg:px-8">
         <div class="w-full bg-card border"></div>
