--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,20 +2,12 @@
 import ThemeToggle from '@/components/ThemeToggle.astro'
 ---
 
-<header class="sticky top-0 z-50">
-  <div class="h-16 pt-6">
-    <div class="w-full sm:px-8">
-      <div class="mx-auto max-w-7xl lg:px-8">
-        <div class="px-4 sm:px-8 lg:px-12">
-          <div class="mx-auto max-w-2xl lg:max-w-5xl">
-            <div class="flex gap-4">
-              <div class="flex flex-1"></div>
-              <div class="flex flex-1 justify-end md:justify-center"></div>
-              <div class="flex justify-end md:flex-1">
-                <ThemeToggle />
-              </div>
-            </div>
-          </div>
+<header class="sticky top-0 z-50 h-16 pt-6">
+  <div class="w-full sm:px-8">
+    <div class="mx-auto max-w-7xl lg:px-8">
+      <div class="px-4 sm:px-8 lg:px-12">
+        <div class="mx-auto flex max-w-2xl justify-end lg:max-w-5xl">
+          <ThemeToggle />
         </div>
       </div>
     </div>
