--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
             </div>
             <div class="lg:order-first lg:row-span-2">
               <h1
-                class="py-3 font-heading scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl"
+                class="scroll-m-20 py-3 font-heading text-4xl font-extrabold tracking-tight lg:text-5xl"
               >
                 <span
                   class="bg-gradient-to-br from-amber-300 via-orange-500 to-yellow-400 bg-clip-text text-transparent"
@@ -56,7 +56,7 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                 knowledge in programming is limited, I find great enjoyment in
                 exploring this fascinating field.
               </p>
-              <blockquote class="leading-7 [&:not(:first-child)]:mt-6 italic">
+              <blockquote class="mt-6 italic">
                 "If we'll ever be remembered, I know it'll be for the way that
                 we love."
               </blockquote>
