feat: dropdown for ToggleTheme

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import ThemeToggle from '@/components/ThemeToggle.astro'
+import { ThemeToggle } from '@/components/ThemeToggle'
 ---
 
 <header class="sticky top-0 z-50 h-16 pt-6">
@@ -7,7 +7,7 @@ import ThemeToggle from '@/components/ThemeToggle.astro'
     <div class="mx-auto max-w-7xl lg:px-8">
       <div class="px-4 sm:px-8 lg:px-12">
         <div class="mx-auto flex max-w-2xl justify-end lg:max-w-5xl">
-          <ThemeToggle />
+          <ThemeToggle client:load />
         </div>
       </div>
     </div>
