--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout.astro'
-
-import { Icon } from 'astro-icon'
 import { Image } from 'astro:assets'
 
 import Portrait from '@/assets/portrait.jpg'
+
 import { Button } from '@/components/ui/button'
 import { AspectRatio } from '@/components/ui/aspect-ratio'
+import { Icons } from '@/components/Icons'
 ---
 
 <BaseLayout
@@ -68,7 +68,7 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                   href="https://github.com/torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-github" class="h-6 w-6" />
+                    <Icons.github className="h-6 w-6" />
                     <span class="sr-only">GitHub</span>
                   </Button>
                 </a>
@@ -79,7 +79,7 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                   href="https://www.youtube.com/@torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-youtube" class="h-6 w-6" />
+                    <Icons.youtube className="h-6 w-6" />
                     <span class="sr-only">YouTube</span>
                   </Button>
                 </a>
@@ -90,7 +90,7 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                   href="https://facebook.com/torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-facebook" class="h-6 w-6" />
+                    <Icons.facebook className="h-6 w-6" />
                     <span class="sr-only">Facebook</span>
                   </Button>
                 </a>
@@ -101,19 +101,19 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                   href="https://instagram.com/torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-instagram" class="h-6 w-6" />
+                    <Icons.instagram className="h-6 w-6" />
                     <span class="sr-only">Instagram</span>
                   </Button>
                 </a>
                 <a
-                  aria-label="Me on Twitter"
+                  aria-label="Me on X"
                   target="_blank"
                   rel="noopener noreferrer"
                   href="https://twitter.com/torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-twitter" class="h-6 w-6" />
-                    <span class="sr-only">Twitter</span>
+                    <Icons.X className="h-6 w-6" />
+                    <span class="sr-only">X</span>
                   </Button>
                 </a>
                 <a
@@ -123,7 +123,7 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                   href="https://linkedin.com/in/torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-linkedin" class="h-6 w-6" />
+                    <Icons.linkedin className="h-6 w-6" />
                     <span class="sr-only">LinkedIn</span>
                   </Button>
                 </a>
@@ -134,7 +134,7 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                   href="https://reddit.com/user/torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-reddit" class="h-6 w-6" />
+                    <Icons.reddit className="h-6 w-6" />
                     <span class="sr-only">Reddit</span>
                   </Button>
                 </a>
@@ -145,7 +145,7 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                   href="https://pinterest.com/torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-pinterest" class="h-6 w-6" />
+                    <Icons.pinterest className="h-6 w-6" />
                     <span class="sr-only">Pinterest</span>
                   </Button>
                 </a>
@@ -156,7 +156,18 @@ import { AspectRatio } from '@/components/ui/aspect-ratio'
                   href="https://soundcloud.com/torn4dom4n"
                 >
                   <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
-                    <Icon name="tabler:brand-soundcloud" class="h-6 w-6" />
+                    <Icons.soundcloud className="h-6 w-6" />
+                    <span class="sr-only">SoundCloud</span>
+                  </Button>
+                </a>
+                <a
+                  aria-label="Me on Mastodon"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://mstdn.social/@torn4dom4n"
+                >
+                  <Button variant="ghost" size="icon" class="h-9 w-9 p-0">
+                    <Icons.mastodon className="h-6 w-6" />
                     <span class="sr-only">SoundCloud</span>
                   </Button>
                 </a>
